Some minor css touchups including fixing avatar stretch and text overflow

--- a/public/styles/existing-tweets.css
+++ b/public/styles/existing-tweets.css
@@ -22,7 +22,6 @@ display: flex;
 
 .tweetedAt {
   display: flex;
-  /* justify-content: space-between; */
 }
 
 .tweetedWords {
@@ -31,7 +30,7 @@ display: flex;
   padding-bottom: 30px;
   margin-bottom: 7px;
   padding-left: 1em;
-
+  word-wrap: normal;
   
 }
 
@@ -57,10 +56,10 @@ footer {
   color: red;
 }
 
-.userAvatar {
+/* .userAvatar {
   object-fit: cover;
   
-}
+} */
 
 .name {
   margin-left: 14px;
